--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>The Sierra Dev Company</title>
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.min.css" type="text/css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css" type="text/css"/>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <style type="text/css" media="screen">
       
       body {
-        background-image: url(/bg-img.jpg);
+        background-image: url(bg-img.jpg);
         font-family: "Source Sans Pro", sans-serif;
       }
       .welcome {
